# english-class-notify

./: .gitignore  Makefile  README.md  docker-compose.yml  dockerfile  notify.py  pyproject.toml
.docker/containers/app/: Dockerfile
.docker/containers/db/: Dockerfile
.docker/containers/db/scripts/initdb/: 01_createtb.sql
.github/workflows/: python_test.yml
conf/: config.txt.example
notify/: notify.py
tests/: test_notify.py
